[Rename] update mmagic's docs

--- a/docs/en/_static/css/readthedocs.css
+++ b/docs/en/_static/css/readthedocs.css
@@ -1,5 +1,5 @@
 .header-logo {
-    background-image: url("../image/mmediting-logo.png");
+    background-image: url("../image/mmagic-logo.png");
     background-size: 142px 46px;
     height: 46px;
     width: 142px;
